Add more descriptive alt tags

--- a/adopt.html
+++ b/adopt.html
@@ -64,7 +64,7 @@
       </div>
       <div class="unit xs-1 m-1-2 pad-t island">
         <div class="embed embed-4by3">
-          <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="brown puppy with a blanket" aria-details="puppy-with-blanket">
+          <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="a brown puppy with a blanket" aria-details="puppy-with-blanket">
         </div>
       </div>
     </section>
