--- a/rescues.html
+++ b/rescues.html
@@ -50,7 +50,7 @@
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/collie-snow.jpg" alt="collie in snow" aria-details="collie-in-snow">
+              <img class="embed-item img-flex" src="images/collie-snow.jpg" alt="a collie in snow" aria-details="collie-in-snow">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h2 class="gutter white giga">Ellie</h2>
@@ -76,7 +76,7 @@
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/corgi.jpg" alt="dark corgi" aria-details="corgi-indoors">
+              <img class="embed-item img-flex" src="images/corgi.jpg" alt="a dark corgi" aria-details="corgi-indoors">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h2 class="gutter white giga">Honey</h2>
@@ -102,7 +102,7 @@
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/husky.jpg" alt="white husky" aria-details="white-husky">
+              <img class="embed-item img-flex" src="images/husky.jpg" alt="a white husky" aria-details="white-husky">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h2 class="gutter white giga">Bolt</h2>
@@ -128,7 +128,7 @@
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/pug.jpg" alt="pug" aria-details="pug">
+              <img class="embed-item img-flex" src="images/pug.jpg" alt="a pug" aria-details="pug">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h2 class="gutter white giga">Otis</h2>
@@ -154,7 +154,7 @@
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/shiba-inu.jpg" alt="shiba inu" aria-details="shiba-inu">
+              <img class="embed-item img-flex" src="images/shiba-inu.jpg" alt="a shiba inu in the woods" aria-details="shiba-inu">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h2 class="gutter white giga">Chikage</h2>
@@ -180,7 +180,7 @@
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid relative">
             <div class="unit embed embed-1by1 push">
-              <img class="embed-item img-flex" src="images/pitbull-leaves.jpg" alt="pitbull with leaves" aria-details="pitbull-with-leaves">
+              <img class="embed-item img-flex" src="images/pitbull-leaves.jpg" alt="a pitbull with leaves" aria-details="pitbull-with-leaves">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h2 class="gutter white giga">Poppy</h2>
