--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/black-dog.jpg" alt="black dog" aria-details="black-sad-dog">
+              <img class="embed-item img-flex" src="images/black-dog.jpg" alt="a black dog" aria-details="black-sad-dog">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h3 class="gutter white">Available for Adoption</h3>
@@ -98,7 +98,7 @@
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/dog-chewing-stick.jpg" alt="dog chewing a stick" aria-details="dog-chewing-on-a-stick">
+              <img class="embed-item img-flex" src="images/dog-chewing-stick.jpg" alt="a dog chewing a stick" aria-details="dog-chewing-on-a-stick">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h3 class="gutter white">Adoption Process</h3>
@@ -132,7 +132,7 @@
       </div>
       <div class="unit xs-1 m-1-2 island">
         <div class="embed embed-4by3">
-          <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="brown puppy with a blanket" aria-details="puppy-with-blanket">
+          <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="a brown puppy with a blanket" aria-details="puppy-with-blanket">
         </div>
       </div>
     </section>
