Fix the issues with spacing and alignment

--- a/adopt.html
+++ b/adopt.html
@@ -32,7 +32,7 @@
         </li>
         <li class="unit xs-1-2 m-1-4 island-1-4"><a href="rescues.html">Available Rescues</a></li>
         <li class="unit xs-1-2 m-1-4 island-1-4"><a href="adopt.html">Adopt a Rescue</a></li>
-        <li class="unit xs-1-2 m-1-4 island-1-4"><a href="#">Donations</a></li>
+        <li class="unit xs-1 m-1-4 island-1-4"><a href="#">Donations</a></li>
       </ul>
     </nav>
   </header>
@@ -41,7 +41,7 @@
     <section class="grid gutter wrapper">
       <div class="unit gutter pad-t">
         <h1 class="push-1-2">Adoption Process</h1>
-        <ol class="gutter-2">
+        <ol class="gutter">
           <li>All applicants must fill out the adoption application below.</li>
           <li>Freedom Dog Rescue will review your application to determine if you are a good match. You will receive either an email or phone call to discuss any further detail not answered on the application.</li>
           <li>We will verify your references listed on the form at this point.</li>
@@ -56,7 +56,7 @@
       <div class="unit xs-1 m-1-2 gutter pad-t">
         <h2 class="push-1-2">Adoption Fee</h2>
         <p class="push-1-2">All our dogs have adoption fees based on their age. These adoption fees help us cover the cost of taking care of other dogs which includes feeding, medicating, and housing them.</p>
-        <ol class="gutter-2">
+        <ol class="gutter">
           <li>Under two years old: $500</li>
           <li>Two to seven years old: $400</li>
           <li>Over eight years old: $300</li>
@@ -184,18 +184,18 @@
     <div class="unit xs-1 m-1-2 micro pad-t-1-2">
       <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
     </div>
-    <div class="unit xs-1 m-0 micro pad-t-1-2 text-center">
+    <div class="unit xs-1 m-0 micro pad-t-1-2">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2 push-r" href="adopt.html">Adopt a Rescue</a></li>
-        <li><a class="no-line push-1-2" href="#">Donations</a></li>
+        <li><a class="no-line push-1-2 push-r" href="#">Donations</a></li>
       </ul>
     </div>
     <div class="unit xs-0 m-1-2 micro pad-t-1-2 text-right">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2 push-r" href="adopt.html">Adopt a Rescue</a></li>
-        <li><a class="no-line push-1-2" href="#">Donations</a></li>
+        <li><a class="no-line push-1-2 push-r" href="#">Donations</a></li>
       </ul>
     </div>
   </footer>
