--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </li>
         <li class="unit xs-1-2 m-1-4 island-1-4"><a href="rescues.html">Available Rescues</a></li>
         <li class="unit xs-1-2 m-1-4 island-1-4"><a href="adopt.html">Adopt a Rescue</a></li>
-        <li class="unit xs-1-2 m-1-4 island-1-4"><a href="#">Donations</a></li>
+        <li class="unit xs-1 m-1-4 island-1-4"><a href="#">Donations</a></li>
       </ul>
     </nav>
   </header>
@@ -119,15 +119,15 @@
         <h3 class="push-1-2">Contact Us</h3>
         <dl class="push-1-4">
           <dt class="bold">Adoptions</dt>
-          <dd class="push-1-4">adoptions@freedomdogrescue.ca</dd>
+          <dd class="push-1-4">adoptions<wbr>@freedomdogrescue.ca</dd>
           <dt class="bold">Event/Fundraising:</dt>
-          <dd class="push-1-4">fundraising@freedomdogrescue.ca</dd>
+          <dd class="push-1-4">fundraising<wbr>@freedomdogrescue.ca</dd>
           <dt class="bold">Intake/Owner Surrender:</dt>
-          <dd class="push-1-4">freedomdogintake@gmail.com</dd>
+          <dd class="push-1-4">freedomdogintake<wbr>@gmail.com</dd>
           <dt class="bold">General Inquiries:</dt>
-          <dd class="push-1-4">freedomdogrescue@gmail.com</dd>
+          <dd class="push-1-4">freedomdogrescue<wbr>@gmail.com</dd>
           <dt class="bold">Donations:</dt>
-          <dd class="push-1-4">finance@freedomdogrescue.ca</dd>
+          <dd class="push-1-4">finance<wbr>@freedomdogrescue.ca</dd>
         </dl>
       </div>
       <div class="unit xs-1 m-1-2 island">
@@ -142,18 +142,18 @@
     <div class="unit xs-1 m-1-2 micro pad-t-1-2">
       <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
     </div>
-    <div class="unit xs-1 m-0 micro pad-t-1-2 text-center">
+    <div class="unit xs-1 m-0 micro pad-t-1-2">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2 push-r" href="adopt.html">Adopt a Rescue</a></li>
-        <li><a class="no-line push-1-2" href="#">Donations</a></li>
+        <li><a class="no-line push-1-2 push-r" href="#">Donations</a></li>
       </ul>
     </div>
     <div class="unit xs-0 m-1-2 micro pad-t-1-2 text-right">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2 push-r" href="adopt.html">Adopt a Rescue</a></li>
-        <li><a class="no-line push-1-2" href="#">Donations</a></li>
+        <li><a class="no-line push-1-2 push-r" href="#">Donations</a></li>
       </ul>
     </div>
   </footer>
