--- a/rescues.html
+++ b/rescues.html
@@ -32,7 +32,7 @@
         </li>
         <li class="unit xs-1-2 m-1-4 island-1-4"><a href="rescues.html">Available Rescues</a></li>
         <li class="unit xs-1-2 m-1-4 island-1-4"><a href="adopt.html">Adopt a Rescue</a></li>
-        <li class="unit xs-1-2 m-1-4 island-1-4"><a href="#">Donations</a></li>
+        <li class="unit xs-1 m-1-4 island-1-4"><a href="#">Donations</a></li>
       </ul>
     </nav>
   </header>
@@ -211,18 +211,18 @@
     <div class="unit xs-1 m-1-2 micro pad-t-1-2">
       <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
     </div>
-    <div class="unit xs-1 m-0 micro pad-t-1-2 text-center">
+    <div class="unit xs-1 m-0 micro pad-t-1-2">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2 push-r" href="adopt.html">Adopt a Rescue</a></li>
-        <li><a class="no-line push-1-2" href="#">Donations</a></li>
+        <li><a class="no-line push-1-2 push-r" href="#">Donations</a></li>
       </ul>
     </div>
     <div class="unit xs-0 m-1-2 micro pad-t-1-2 text-right">
       <ul class="list-group-inline gutter push-1-2">
         <li><a class="no-line push-1-2 push-r" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line push-1-2 push-r" href="adopt.html">Adopt a Rescue</a></li>
-        <li><a class="no-line push-1-2" href="#">Donations</a></li>
+        <li><a class="no-line push-1-2 push-r" href="#">Donations</a></li>
       </ul>
     </div>
   </footer>
